tigren testimonial: tao form, url

--- a/app/code/Tigren/HelloWorld/view/adminhtml/layout/helloworld_post_addnew.xml
+++ b/app/code/Tigren/HelloWorld/view/adminhtml/layout/helloworld_post_addnew.xml
@@ -7,9 +7,12 @@
 
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
+    <head>
+        <title>HelloWorld</title>
+    </head>
     <body>
         <referenceContainer name="content">
-            <uiComponent name="dev_grid_category_listing"/>
+            <uiComponent name="helloworld_post_form"/>
         </referenceContainer>
     </body>
 </page>
