--- a/app/code/Tigren/CustomerGroupCatalog/view/base/templates/product/price/final_price.phtml
+++ b/app/code/Tigren/CustomerGroupCatalog/view/base/templates/product/price/final_price.phtml
@@ -5,16 +5,16 @@
  * @license   Open Software License ("OSL") v. 3.0
  */
 
-$priceModel = $block->getPriceType('regular_price');
-$finalPriceModel = $block->getPriceType('final_price');
-$idSuffix = $block->getIdSuffix() ? $block->getIdSuffix() : '';
-$schema = ($block->getZone() == 'item_view') ? true : false;
+$priceModel = $this->getPriceType('regular_price');
+$finalPriceModel = $this->getPriceType('final_price');
+$idSuffix = $this->getIdSuffix() ? $this->getIdSuffix() : '';
+$schema = ($this->getZone() == 'item_view') ? true : false;
 ?>
-<?php if ($block->hasSpecialPrice()): ?>
+<?php if ($this->hasSpecialPrice()): ?>
     <span class="special-price">
-        <?php echo $block->renderAmount($finalPriceModel->getAmount(), [
+        <?php echo $this->renderAmount($finalPriceModel->getAmount(), [
             'display_label' => __('Special Price'),
-            'price_id' => $block->getPriceId('product-price-' . $idSuffix),
+            'price_id' => $this->getPriceId('product-price-' . $idSuffix),
             'price_type' => 'finalPrice',
             'include_container' => true,
             'schema' => $schema
@@ -22,37 +22,37 @@ $schema = ($block->getZone() == 'item_view') ? true : false;
     </span>
     <span>
 	<?php
-    $item = $block->getSaleableItem();
+    $item = $this->getSaleableItem();
     $_savePercent = 100 - round(((float)$item->getFinalPrice() / (float)$item->getPrice()) * 100);
-    echo '<b style="color:#008000">' . $_savePercent . '% off </b>';
+    echo '<b style="color:#008000">' . $_savePercent . '% </b>';
     ?>
     </span>
     <span class="old-price">
-        <?php echo $block->renderAmount($priceModel->getAmount(), [
+        <?php echo $this->renderAmount($priceModel->getAmount(), [
             'display_label' => __('Regular Price'),
-            'price_id' => $block->getPriceId('old-price-' . $idSuffix),
+            'price_id' => $this->getPriceId('old-price-' . $idSuffix),
             'price_type' => 'oldPrice',
             'include_container' => true,
             'skip_adjustments' => true
         ]); ?>
     </span>
 <?php else: ?>
-    <?php echo $block->renderAmount($finalPriceModel->getAmount(), [
-        'price_id' => $block->getPriceId('product-price-' . $idSuffix),
+    <?php echo $this->renderAmount($finalPriceModel->getAmount(), [
+        'price_id' => $this->getPriceId('product-price-' . $idSuffix),
         'price_type' => 'finalPrice',
         'include_container' => true,
         'schema' => $schema
     ]); ?>
 <?php endif; ?>
 
-<?php if ($block->showMinimalPrice()): ?>
-    <?php if ($block->getUseLinkForAsLowAs()): ?>
-        <a href="<?= $block->getSaleableItem()->getProductUrl() ?>" class="minimal-price-link">
-            <?= $block->renderAmountMinimal() ?>
+<?php if ($this->showMinimalPrice()): ?>
+    <?php if ($this->getUseLinkForAsLowAs()): ?>
+        <a href="<?= $this->getSaleableItem()->getProductUrl() ?>" class="minimal-price-link">
+            <?= $this->renderAmountMinimal() ?>
         </a>
     <?php else: ?>
         <span class="minimal-price-link">
-            <?= $block->renderAmountMinimal() ?>
+            <?= $this->renderAmountMinimal() ?>
         </span>
     <?php endif ?>
 <?php endif; ?>
