--- a/app/code/Tigren/Testimonial/view/frontend/templates/testimonial/list.phtml
+++ b/app/code/Tigren/Testimonial/view/frontend/templates/testimonial/list.phtml
@@ -6,28 +6,49 @@
  */
 
 $testimonialCollection = $this->getLoadedTestimonialCollection();
-$iterator = 1;
-$total = $testimonialCollection->count();
 ?>
 
-<div class="testimonial-wrapper">
-    <ol class="testimonials list">
+<div class="table-wrapper orders-history">
+    <h1>Testimonial</h1>
+    <form action="<?= $this->getUrl('testimonial/storefront/create') ?>">
+        <button type="submit" class="action submit " id="custom+btn">Add
+        </button>
+    </form>
+    <table class="data table table-order-items history" id="my-orders-table">
+        <caption class="table-caption"><?php echo __('Testimonial') ?></caption>
+        <thead>
+        <tr>
+            <th scope="col" class="col id"><?php echo __('ID') ?></th>
+            <th scope="col" class="col name"><?php echo __('Name') ?></th>
+            <th scope="col" class="col email"><?php echo __('Enail') ?></th>
+            <th scope="col" class="col message"><?php echo __('Message') ?></th>
+            <th scope="col" class="col company"><?php echo __('Company ') ?></th>
+            <th scope="col" class="col rating"><?php echo __('Rating') ?></th>
+            <th scope="col" class="col status"><?php echo __('Status') ?></th>
+            <th scope="col" class="col created_at"><?php echo __('Created At ') ?></th>
+            <th colspan="2"><?php echo __('Actions ') ?></th>
+
+        </tr>
+        </thead>
+        <tbody>
         <?php foreach ($testimonialCollection as $testimonial): ?>
-            <li class="item<?php echo ($iterator == 1) ? ' first' : ''; ?><?php echo ($total == $iterator) ? ' last' : ''; ?>">
-                <div class="title">
-                    <a href="<?php echo $this->getTestimonialUrl($testimonial); ?>"
-                       title="<?php echo $testimonial->getName(); ?>">
-                        <?php echo $testimonial->getName(); ?>
-                    </a>
-                </div>
-                <div class="name"><?php echo $testimonial->getName(); ?></div>
-                <div class="email"><?php echo $testimonial->getEmail(); ?></div>
-                <div class="message"><?php echo $testimonial->getMessage(); ?></div>
-                <div class="company"><?php echo $testimonial->getCompany(); ?></div>
-                <div class="rating"><?php echo $testimonial->getRating(); ?></div>
-                <div class="status"><?php echo $testimonial->getStatus(); ?></div>
-            </li>
-            <?php $iterator++; ?>
+            <tr>
+                <td class="col id"><?php echo $testimonial->getId() ?></td>
+                <td class="col name"><?php echo $testimonial->getName() ?></td>
+                <td class="col email"><?php echo $testimonial->getEmail() ?></td>
+                <td class="col message"><?php echo $testimonial->getMessage() ?></td>
+                <td class="col company"><?php echo $testimonial->getCompany() ?></td>
+                <td class="col rating"><?php echo $testimonial->getRating() ?></td>
+                <td class="col status"><?php echo (1 == $testimonial->getStatus()) ? 'Enable' : 'Disable'; ?></td>
+                <td class="col date"><?php echo $testimonial->getCreatedAt() ?></td>
+                <td>
+                    <a href="http://magento.localhost.com/testimonial/storefront/edit?id=<?php echo $testimonial->getEntityId() ?>">Edit</a>
+                </td>
+                <td>
+                    <a href="http://magento.localhost.com/testimonial/storefront/delete?id=<?php echo $testimonial->getEntityId() ?>">Delete</a>
+                </td>
+            </tr>
         <?php endforeach; ?>
-    </ol>
+        </tbody>
+    </table>
 </div>
