--- a/app/code/Tigren/Testimonial/view/frontend/templates/testimonial/create_testimonial_form.phtml
+++ b/app/code/Tigren/Testimonial/view/frontend/templates/testimonial/create_testimonial_form.phtml
@@ -13,9 +13,8 @@ use Magento\Customer\Block\Form\Login;
 <div class="block block-customer-login">
     <div class="block-content" aria-labelledby="block-customer-login-heading">
         <form class="form form-login"
-              action="<?= $this->getUrl("testimonial/storefront/save") ?>>"
               method="post"
-              id="login-form"
+              id="question-form"
               data-mage-init='{"validation":{}}'>
             <fieldset class="fieldset login" data-hasrequired="<?= $block->escapeHtml(__('* Required Fields')) ?>">
                 <div class="field title required">
@@ -54,7 +53,7 @@ use Magento\Customer\Block\Form\Login;
                     <label class="label" for="rating"><span><?= $block->escapeHtml(__('Rating')) ?></span></label>
                     <div class="rating">
                         <input name="rating" value=""
-                               id="rating" type="text" class="input-text"
+                               id="rating" type="number" class="input-text"
                                title="<?= $block->escapeHtmlAttr(__('Rating')) ?>">
                     </div>
                 </div>
@@ -67,11 +66,28 @@ use Magento\Customer\Block\Form\Login;
                 </div>
                 <div class="actions-toolbar">
                     <div class="primary">
-                        <button type="submit" class="action login primary" name="send" id="send2">
-                            <span><?= $block->escapeHtml(__('Save')) ?></span></button>
+                        <button class="action login primary" name="send" id="submit">
+                            <span><?= $block->escapeHtml(__('Save')) ?></span>
+                        </button>
                     </div>
                 </div>
             </fieldset>
         </form>
     </div>
 </div>
+<script type="text/javascript">
+    require(['jquery', 'mage/storage', 'mage/url'], function ($, storage, urlBuilder) {
+        $('#submit').on('click', function () {
+            var formData = new FormData($("#question-form")[0]);
+            formData = JSON.stringify(Object.fromEntries(formData));
+            storage.post(
+                urlBuilder.build("rest/V1/testimonial/save"),
+                JSON.stringify({data: formData})
+            ).done(function (r) {
+                alert("Create Testimonial Success");
+            }).fail(function (r) {
+                alert("Error");
+            });
+        });
+    });
+</script>
