--- a/app/code/Tigren/Testimonial/view/frontend/templates/testimonial/edit_testimonial_form.phtml
+++ b/app/code/Tigren/Testimonial/view/frontend/templates/testimonial/edit_testimonial_form.phtml
@@ -20,11 +20,18 @@ $data = $block->getEditData();
 <div class="block block-customer-login">
     <div class="block-content" aria-labelledby="block-customer-login-heading">
         <form class="form form-login"
-              action="<?= $this->getUrl("testimonial/storefront/update") ?>.?id=<?= $data['entity_id'] ?>"
+              action=""
               method="post"
-              id="login-form"
+              id="question-form-edit"
               data-mage-init='{"validation":{}}'>
             <fieldset class="fieldset login" data-hasrequired="<?= $block->escapeHtml(__('* Required Fields')) ?>">
+                <div class="field title required">
+                    <div class="control">
+                        <input name="id" value="<?= $data['entity_id'] ?>" type="text" hidden
+                               id="id" class="input-text"
+                               title="<?= $data['entity_id'] ?>">
+                    </div>
+                </div>
                 <div class="field title required">
                     <label class="label" for="name"><span><?= $block->escapeHtml(__('Name')) ?></span></label>
                     <div class="control">
@@ -86,3 +93,19 @@ $data = $block->getEditData();
         </form>
     </div>
 </div>
+<script type="text/javascript">
+    require(['jquery', 'mage/storage', 'mage/url'], function ($, storage, urlBuilder) {
+        $('#send2').on('click', function () {
+            var formData = new FormData($("#question-form-edit")[0]);
+            formData = JSON.stringify(Object.fromEntries(formData));
+            storage.post(
+                urlBuilder.build("rest/V1/testimonial/save"),
+                JSON.stringify({data: formData})
+            ).done(function (r) {
+                alert("Update Testimonial Success");
+            }).fail(function (r) {
+                alert("Error");
+            });
+        });
+    });
+</script>
