--- a/app/code/Tigren/Testimonial/view/frontend/layout/testimonial_testimonial_edit.xml
+++ b/app/code/Tigren/Testimonial/view/frontend/layout/testimonial_testimonial_edit.xml
@@ -6,12 +6,11 @@
   -->
 
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-      xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd"
-      layout="2columns-right">
+      xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <referenceContainer name="content">
-            <block class="Tigren\Testimonial\Block\Storefront\ListTestimonial" name="testimonial_list"
-                   template="testimonial/list.phtml"/>
+            <block class="Tigren\Testimonial\Block\Testimonial\Edit" name="testimonial_edit"
+                   template="testimonial/edit_testimonial_form.phtml"/>
         </referenceContainer>
     </body>
 </page>
