--- a/app/code/Tigren/Testimonial/view/frontend/layout/testimonial_testimonial_create.xml
+++ b/app/code/Tigren/Testimonial/view/frontend/layout/testimonial_testimonial_create.xml
@@ -5,12 +5,12 @@
   ~ @license   Open Software License ("OSL") v. 3.0
   -->
 
-<page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="1column"
       xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
-    <update handle="editor"/>
     <body>
         <referenceContainer name="content">
-            <block class="Tigren\Testimonial\Block\Adminhtml\Testimonial\Edit" name="jobs_testimonial_edit"/>
+            <block class="Tigren\Testimonial\Block\Testimonial\Create" name="testimonial_display"
+                   template="testimonial/create_testimonial_form.phtml"/>
         </referenceContainer>
     </body>
 </page>
