--- a/app/code/Tigren/Testimonial/view/frontend/layout/testimonial_testimonial_index.xml
+++ b/app/code/Tigren/Testimonial/view/frontend/layout/testimonial_testimonial_index.xml
@@ -6,11 +6,12 @@
   -->
 
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-      xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
+      xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd"
+      layout="2columns-right">
     <body>
         <referenceContainer name="content">
-            <block class="Tigren\Testimonial\Block\Storefront\Edit" name="testimonial_edit"
-                   template="testimonial/edit_testimonial_form.phtml"/>
+            <block class="Tigren\Testimonial\Block\Testimonial\ListTestimonial" name="testimonial_list"
+                   template="testimonial/list.phtml"/>
         </referenceContainer>
     </body>
 </page>
