--- a/app/code/Tigren/Testimonial/view/frontend/templates/testimonial/list.phtml
+++ b/app/code/Tigren/Testimonial/view/frontend/templates/testimonial/list.phtml
@@ -55,7 +55,11 @@ $testimonialCollection = $block->getLoadedTestimonialCollection();
         <?php endforeach; ?>
         </tbody>
     </table>
+
 </div>
+<?php if ($block->getPagerHtml()): ?>
+    <div class="order-products-toolbar toolbar bottom"><?php echo $block->getPagerHtml(); ?></div>
+<?php endif ?>
 <!--<div class="liveExample">-->
 <!--    <p>First Name: <input data-bind="value: firstName"/></p>-->
 <!--    <p>Last Name: <input data-bind="value: lastName"/></p>-->
